<?xml version="1.0"?>
<package format="2">
  <name>serial_node_example</name>
  <version>1.0.0</version>
  <description>The example for serial communication in ROS environment.</description>

  <author email="kabkyoum.kim@doosan.com">Kab Kyoum Kim</author>
  <author email="jinhyuk.gong@doosan.com">Jin Hyuk Gong</author>
  <author email="jeongwoo1.lee@doosan.com">Jeongwoo Lee</author>

  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>dsr_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>dsr_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>dsr_msgs</exec_depend>

  <export>
  </export>
</package>